remove redundant files & rename

--- a/cascaded_sds_test.ipynb
+++ b/cascaded_sds_test.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cascaded SDS 시스템 테스트 입니다.\n",
+    "Whisper - GPT2 - googleTTS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
