--- a/ttalkkak.ipynb
+++ b/ttalkkak.ipynb
@@ -83,14 +83,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. 데이터 Preprocess"
+    "# 2. 데이터 Preprocess(현재는 skip해도 됨)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2-0. 데이터셋 다운로드(현재는 skip해도 됨)"
+    "## 2-0. 데이터셋 다운로드"
    ]
   },
   {
@@ -209,7 +209,7 @@
    "source": [
     "!python3 src/infer/cli_infer_emosds.py --model-path \"/shared/NAS_SSD/jhl/futureinternet/output/stage3/checkpoint-3600\" --output-dir \"output\"\n",
     "\n",
-    "# 입력 prompt 형식: \"[History] <<Input>>: [wav파일path(assets/testprompts)]\""
+    "# 입력 prompt 형식: \"[History] <<Input>>: [wav파일path(assets/testprompts/에 있는 거거)]\""
    ]
   }
  ],
