refactor & fix bugs (#4)
* integrate unified train code to asr train code

* modify scripts to use updated train code

* remove unified train code

* remove hardcoded librispeech path & bugs

* fix variable name

* add dataset download step

* update gitignore

* fix argument loading bug

* minor fix

* fix path and argument

* fix: style tokens not added to vocab

* update ttalkkak

--- a/ttalkkak.ipynb
+++ b/ttalkkak.ipynb
@@ -83,7 +83,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. 데이터 Preprocess"
+    "# 2. 데이터 Preprocess(현재는 skip해도 됨)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2-0. 데이터셋 다운로드"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# >> StyleTalk 다운로드 --> data/styletalk/에 압축 해제할 것\n",
+    "#    밑에 train.csv, eval.csv 파일도 다운받아서 data/styletalk에 저장할 것\n",
+    "# https://www.notion.so/jhwanlee/Future-Internet-16dd543c7357803d96e6f9b7914048a3?pvs=4#17dd543c735780eeb32cf35fd4689f0f"
    ]
   },
   {
@@ -99,8 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# >> EmoSDS 디렉토리에서 실행\n",
-    "!python3 utils/build_data.py asr\n",
+    "!python3 utils/build_data.py asr --librispeech-dir /shared/NAS_SSD/wooyeol/LibriSpeech/train-clean-100/train-clean-100/\n",
     "!python3 utils/merge_jsonl_files.py data/asr_task_styletalk_train.jsonl data/asr_task_styletalk_eval.jsonl data/asr_task_styletalk_train_eval.jsonl\n",
     "!python3 utils/merge_jsonl_files.py data/asr_task_styletalk_train_eval.jsonl data/asr_task_librispeech.jsonl data/asr_task_librispeech_styletalk.jsonl"
    ]
@@ -109,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2-1. Unified(ASR + Style Prediction + Response Prediction) task 데이터 생성"
+    "## 2-2. Unified(ASR + Style Prediction + Response Prediction) task 데이터 생성"
    ]
   },
   {
@@ -118,8 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# >> EmoSDS 디렉토리에서 실행\n",
-    "!python3 utils/build_data.py unified"
+    "!python3 utils/build_data.py unified --dailytalk-dir /shared/NAS_SSD/jhl/futureinternet/dailytalk"
    ]
   },
   {
@@ -135,7 +151,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# >> EmoSDS 디렉토리에서 실행\n",
     "!bash scripts/asr_sft.sh"
    ]
   },
@@ -146,7 +161,6 @@
    "outputs": [],
    "source": [
     "# >> 모델 zip파일로 저장(파일만 저장함)\n",
-    "#    EmoSDS 디렉토리에서 실행\n",
     "# ! 실행하기 전에 zip 파일명 바꿀 것\n",
     "\n",
     "!find /shared/NAS_SSD/jhl/futureinternet/output/asr -type f -maxdepth 1 -exec zip asr_training_6epochs_20250113.zip {} +"
@@ -165,7 +179,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# >> EmoSDS 디렉토리에서 실행\n",
     "!bash scripts/unified_sft.sh"
    ]
   },
@@ -176,7 +189,6 @@
    "outputs": [],
    "source": [
     "# >> 모델 zip파일로 저장(파일만 저장함)\n",
-    "#    EmoSDS 디렉토리에서 실행\n",
     "# ! 실행하기 전에 zip 파일명 바꿀 것\n",
     "\n",
     "!find /shared/NAS_SSD/jhl/futureinternet/output/unified -type f -maxdepth 1 -exec zip unified_training_6epochs_20250113.zip {} +"
@@ -186,7 +198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. CLI inference 수행"
+    "# 5. CLI inference 수행(Optional)"
    ]
   },
   {
@@ -195,10 +207,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# >> EmoSDS 디렉토리에서 실행\n",
     "!python3 src/infer/cli_infer_emosds.py --model-path \"/shared/NAS_SSD/jhl/futureinternet/output/stage3/checkpoint-3600\" --output-dir \"output\"\n",
     "\n",
-    "# 입력 prompt 형식: \"[History] <<Input>>: [wav파일path(assets/testprompts)]\""
+    "# 입력 prompt 형식: \"[History] <<Input>>: [wav파일path(assets/testprompts/에 있는 거거)]\""
    ]
   }
  ],
