--- a/ttalkkak.ipynb
+++ b/ttalkkak.ipynb
@@ -117,9 +117,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ! 실행하기 전에 output path 잘 확인할 것\n",
     "!python3 utils/build_data.py asr --librispeech-dir /shared/NAS_SSD/wooyeol/LibriSpeech/train-clean-100/train-clean-100/\n",
-    "!python3 utils/merge_jsonl_files.py data/asr_task_styletalk_train.jsonl data/asr_task_styletalk_eval.jsonl data/asr_task_styletalk_train_eval.jsonl\n",
-    "!python3 utils/merge_jsonl_files.py data/asr_task_styletalk_train_eval.jsonl data/asr_task_librispeech.jsonl data/asr_task_librispeech_styletalk.jsonl"
+    "!python3 utils/merge_jsonl_files.py data/asr/layer6_k1000/asr_task_styletalk_train.jsonl data/asr/layer6_k1000/asr_task_styletalk_eval.jsonl data/asr/layer6_k1000/asr_task_styletalk_train_eval.jsonl\n",
+    "!python3 utils/merge_jsonl_files.py data/asr/layer6_k1000/asr_task_styletalk_train_eval.jsonl data/asr/layer6_k1000/asr_task_librispeech.jsonl data/asr/layer6_k1000/asr_task_librispeech_styletalk.jsonl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2-2. ASR+SER task 데이터 생성"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ASR+SER\n",
+    "# ! 실행하기 전에 output path 잘 확인할 것\n",
+    "!python3 utils/build_data.py asr+ser --dailytalk-dir /shared/NAS_SSD/jhl/futureinternet/dailytalk --esd-dir /shared/NAS_SSD/jhl/futureinternet/EmotionSpeechDataset --ravdess-dir /shared/NAS_SSD/jhl/futureinternet/ravdess_audio\n",
+    "!python3 utils/merge_jsonl_files.py data/asr_ser/layer7_k2000/asr_ser_task_dailytalk.jsonl data/asr_ser/layer7_k2000/asr_ser_task_esd.jsonl data/asr_ser/layer7_k2000/asr_ser_task_dailytalk_esd.jsonl\n",
+    "!python3 utils/merge_jsonl_files.py data/asr_ser/layer7_k2000/asr_ser_task_dailytalk_esd.jsonl data/asr_ser/layer7_k2000/asr_ser_task_ravdess.jsonl data/asr_ser/layer7_k2000/asr_ser_task_merged.jsonl\n",
+    "!python3 utils/asr_ser_split_jsonl_dataset.py data/asr_ser/layer7_k2000/asr_ser_task_merged.jsonl data/asr_ser/layer7_k2000"
    ]
   },
   {
@@ -135,6 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ! 실행하기 전에 output path 잘 확인할 것\n",
     "!python3 utils/build_data.py unified --dailytalk-dir /shared/NAS_SSD/jhl/futureinternet/dailytalk"
    ]
   },
@@ -151,6 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ! overwrite_output_dir 여부 확인\n",
     "!bash scripts/asr_sft.sh"
    ]
   },
@@ -170,7 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. Unified(ASR + Style Prediction + Response Prediction) task 훈련 진행"
+    "# 4. ASR+SER task 훈련 진행"
    ]
   },
   {
@@ -179,6 +203,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ! overwrite_output_dir 여부 확인\n",
+    "!bash scripts/asr_ser_sft.sh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# >> 모델 zip파일로 저장(파일만 저장함)\n",
+    "# ! 실행하기 전에 zip 파일명 바꿀 것\n",
+    "\n",
+    "!find /shared/NAS_SSD/jhl/futureinternet/output/asr_ser -type f -maxdepth 1 -exec zip asr_ser_training_3epochs_20250121.zip {} +\n",
+    "!find . -type f -maxdepth 1 -exec zip asr_ser_training_6layer_10epochs_20250121.zip {} +"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. Unified(ASR + Style Prediction + Response Prediction) task 훈련 진행"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ! overwrite_output_dir 여부 확인\n",
     "!bash scripts/unified_sft.sh"
    ]
   },
@@ -207,9 +262,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python3 src/infer/cli_infer_emosds.py --model-path \"/shared/NAS_SSD/jhl/futureinternet/output/stage3/checkpoint-3600\" --output-dir \"output\"\n",
+    "!python3 src/infer/cli_infer_emosds.py --model-path \"/shared/NAS_SSD/jhl/futureinternet/output/unified\" --output-dir \"output\" --interact\n",
     "\n",
-    "# 입력 prompt 형식: \"[History] <<Input>>: [wav파일path(assets/testprompts/에 있는 거거)]\""
+    "# 입력 prompt 형식: \"[History] <<Input>>: [wav파일path(assets/testprompts/에 있는 거)]\""
    ]
   }
  ],
