--- a/ttalkkak.ipynb
+++ b/ttalkkak.ipynb
@@ -187,7 +187,8 @@
     "# >> 모델 zip파일로 저장(파일만 저장함)\n",
     "# ! 실행하기 전에 zip 파일명 바꿀 것\n",
     "\n",
-    "!find /shared/NAS_SSD/jhl/futureinternet/output/asr -type f -maxdepth 1 -exec zip asr_training_6epochs_20250113.zip {} +"
+    "# !find /shared/NAS_SSD/jhl/futureinternet/output/asr -type f -maxdepth 1 -exec zip asr_training_10epochs_20250124.zip {} +\n",
+    "!find . -type f -maxdepth 1 -exec zip asr_training_10epochs_20250124.zip {} +"
    ]
   },
   {
