remove unnecessary files & code 2

--- a/ttalkkak.ipynb
+++ b/ttalkkak.ipynb
@@ -120,7 +120,7 @@
    "outputs": [],
    "source": [
     "# ! 실행하기 전에 output path 잘 확인할 것\n",
-    "!python3 utils/build_data.py asr --librispeech-dir /shared/NAS_SSD/wooyeol/LibriSpeech/train-clean-100/train-clean-100/\n",
+    "!Do\n",
     "# python3 utils/merge_jsonl_files.py data/asr/layer6_k1000/asr_task_styletalk_train.jsonl data/asr/layer6_k1000/asr_task_styletalk_eval.jsonl data/asr/layer6_k1000/asr_task_styletalk_train_eval.jsonl\n",
     "# python3 utils/merge_jsonl_files.py data/asr/layer6_k1000/asr_task_styletalk_train_eval.jsonl data/asr/layer6_k1000/asr_task_librispeech.jsonl data/asr/layer6_k1000/asr_task_librispeech_styletalk.jsonl\n",
     "\n",
@@ -224,6 +224,7 @@
     "# >> 모델 zip파일로 저장(파일만 저장함)\n",
     "# ! 실행하기 전에 zip 파일명 바꿀 것\n",
     "\n",
+    "!find /shared/NAS_SSD/jhl/futureinternet/output/asr_6layer_k1000_merged -type f -maxdepth 1 -exec zip asr_training.zip {} +\n",
     "!find /shared/NAS_SSD/jhl/futureinternet/output/asr -type f -maxdepth 1 -exec zip asr_training_10epochs_20250124.zip {} +\n",
     "!find ./checkpoint-1115 -maxdepth 1 -type f -exec zip asr_training_k2048_10epochs_20250201.zip {} +"
    ]
@@ -255,6 +256,7 @@
     "# >> 모델 zip파일로 저장(파일만 저장함)\n",
     "# ! 실행하기 전에 zip 파일명 바꿀 것\n",
     "\n",
+    "!find /shared/NAS_SSD/jhl/futureinternet/output/asr_ser_6layer_k1000_diverse_prompt_only_esd_residual -type f -maxdepth 1 -exec zip asr_ser_training.zip {} +\n",
     "!find /shared/NAS_SSD/jhl/futureinternet/output/asr_ser -type f -maxdepth 1 -exec zip asr_ser_training_3epochs_20250121.zip {} +\n",
     "!find ./asr_ser_7layer_k2000_merged/checkpoint-267 -type f -maxdepth 1 -exec zip asr_ser_training_k2000_10epochs_20250128.zip {} +"
    ]
