remove unnecessary files & code 3

--- a/ttalkkak.ipynb
+++ b/ttalkkak.ipynb
@@ -120,7 +120,7 @@
    "outputs": [],
    "source": [
     "# ! 실행하기 전에 output path 잘 확인할 것\n",
-    "!Do\n",
+    "!python3 utils/build_data.py asr --librispeech-dir /shared/NAS_SSD/wooyeol/LibriSpeech/train-clean-100/train-clean-100/\n",
     "# python3 utils/merge_jsonl_files.py data/asr/layer6_k1000/asr_task_styletalk_train.jsonl data/asr/layer6_k1000/asr_task_styletalk_eval.jsonl data/asr/layer6_k1000/asr_task_styletalk_train_eval.jsonl\n",
     "# python3 utils/merge_jsonl_files.py data/asr/layer6_k1000/asr_task_styletalk_train_eval.jsonl data/asr/layer6_k1000/asr_task_librispeech.jsonl data/asr/layer6_k1000/asr_task_librispeech_styletalk.jsonl\n",
     "\n",
